added a few gases

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
                     <input type="checkbox" name="app-gas" value="oxygen" id="app-oxygen">
                     Oxygen
                 </label>
-                <label for="app-methane">
-                    <input type="checkbox" name="app-gas" value="methane" id="app-methane">
-                    Methane
+                <label for="app-nitrogen">
+                    <input type="checkbox" name="app-gas" value="methane" id="app-nitrogen">
+                    Nitrogen
                 </label>
                 <label for="other-gas">
                     <input type="checkbox" name="app-gas" value="other-gas" id="other-gas">
