last mi nute save

--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
                     <input type="checkbox" name="app-gas" value="methane" id="app-nitrogen">
                     Nitrogen
                 </label>
+                <label for="app-carbon-dioxide">
+                    <input type="checkbox" name="app-gas" value="carbon-dioxide" id="carbon-dioxide">
+                    Carbon Dioxide
+                </label>
                 <label for="other-gas">
                     <input type="checkbox" name="app-gas" value="other-gas" id="other-gas">
                     Other Gas
