added more gases and liquid section. added colors.html

--- a/index.html
+++ b/index.html
@@ -55,22 +55,74 @@
             </div>
             
             <div class="input-container btn-container">
-                <p>What comes in contact with seal?</p>
-                <label for="app-oxygen">
-                    <input type="checkbox" name="app-gas" value="oxygen" id="app-oxygen">
+                <p>What gas comes in contact with seal?</p>
+                <label for="oxygen">
+                    <input type="checkbox" name="app-gas" value="oxygen" id="oxygen">
                     Oxygen
                 </label>
-                <label for="app-nitrogen">
-                    <input type="checkbox" name="app-gas" value="methane" id="app-nitrogen">
+                <label for="nitrogen">
+                    <input type="checkbox" name="app-gas" value="methane" id="nitrogen">
                     Nitrogen
                 </label>
-                <label for="app-carbon-dioxide">
+                <label for="carbon-dioxide">
                     <input type="checkbox" name="app-gas" value="carbon-dioxide" id="carbon-dioxide">
                     Carbon Dioxide
+                </label>
+                <label for="argon">
+                    <input type="checkbox" name="app-gas" value="argon" id="argon">
+                    Argon
+                </label>
+                <label for="hydrogen">
+                    <input type="checkbox" name="app-gas" id="hydrogen" value="hydrogen">
+                    Hydrogen
+                </label>
+                <label for="helium">
+                    <input type="checkbox" name="app-gas" id="helium" value="helium">
+                    Helium
+                </label>
+                <label for="acetylene">
+                    <input type="checkbox" name="app-gas" id="acetylene" value="acetylene">
+                    Acetylene
                 </label>
                 <label for="other-gas">
                     <input type="checkbox" name="app-gas" value="other-gas" id="other-gas">
                     Other Gas
+                </label>
+                <label for="na-gas">
+                    <input type="checkbox" name="app-gas" id="na-gas" value="na-gas">
+                    Not Applicable
+                </label>
+            </div>
+
+            <div class="input-container btn-container">
+                <p>What liquid comes in contact with seal?</p>
+                <label for="hydraulic">
+                    <input type="checkbox" name="app-liquid" value="hydraulic" id="hydraulic">
+                    Hydraulic Fluid
+                </label>
+                <label for="water">
+                    <input type="checkbox" name="app-liquid" id="water" value="water">
+                    Water
+                </label>
+                <label for="grease">
+                    <input type="checkbox" name="app-liquid" id="grease" value="grease">
+                    Grease
+                </label>
+                <label for="lubricant">
+                    <input type="checkbox" name="app-liquid" id="lubricant" value="lubricant">
+                    Lubricant
+                </label>
+                <label>
+                    <input type="checkbox" name="app-liquid" id="beer" value="beer">
+                    Beer
+                </label>
+                <label for="other-liquid">
+                    <input type="checkbox" name="app-liquid" value="other-liquid" id="other-liquid">
+                    Other liquid
+                </label>
+                <label for="na-liquid">
+                    <input type="checkbox" name="app-liquid" id="na-liquid" value="na-liquid">
+                    Not Applicable
                 </label>
             </div>
             
