styled some stuff out

--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
-    
+
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div id="main">
-        <h1 id="title">Pacific <span class="title-orange">Rubber</span> <span class="and">&</span> <span class="title-yellow">Packing</span></h1>
-        <p id="description">Quote form</p>
+        <h1 id="title">Pacific <span class="orange">Rubber</span> <span>&</span> <span class="yellow">Packing</span></h1>
+        <p id="description"> Request for <span class="orange">Quote</span></p>
+        
         <form action="" id="survey-form">
             <div class="input-container">
                 <label for="name" id="name-label">Name</label>
