--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@
                 <div class="input-container btn-container" >
                     <p>Are you part of an organization?</p>
                     <label for="org-yes">
-                        <input type="radio" name="org" value="org-yes" id="org-yes">
+                        <span></span>
+                        <input class="radio" type="radio" name="org" value="org-yes" id="org-yes">
                         Yes
                     </label>
                     <label for="org-np">
-                        <input type="radio" name="org" value="org-no" id="org-no">
+                        <input class="radio" type="radio" name="org" value="org-no" id="org-no">
                         No
                     </label>
                 </div>
