--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         
                 <div class="input-container">
                     <label for="dropdown" id="dropdown-label">Industry</label>
-                    <select name="" id="dropdown">
+                    <select name="industry" id="dropdown">
                         <option value="semiconductor">Semiconductor</option>
                         <option value="automotive">Automotive</option>
                         <option value="defense">Defense</option>
